--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
 <section class="galeria">
     <h2>Galería de Trabajos</h2>
     <div class="imagenes">
-        <img src="{{ url_for('static', filename='media/trabajo1.jpg') }}" alt="Diseño dental 1">
+        <img src="https://www.google.com/imgres?q=blanqueamiento%20dental%20imagen%20libre&imgurl=https%3A%2F%2Fbucco.es%2Fwp-content%2Fuploads%2F2020%2F10%2Fblanqueamiento-dental-beneficios-768x414-1.jpg&imgrefurl=https%3A%2F%2Fbucco.es%2Fblog%2Fodontologia-general%2F8-cosas-que-no-sabias-sobre-el-blanqueamiento-dental%2F&docid=C8AMOFgHtvDoDM&tbnid=ngUMsmUfsbJHGM&vet=12ahUKEwj895nKz8OQAxU75skDHXCwDQsQM3oECBcQAA..i&w=768&h=414&hcb=2&ved=2ahUKEwj895nKz8OQAxU75skDHXCwDQsQM3oECBcQAA" alt="Diseño dental 1">
         <img src="{{ url_for('static', filename='media/trabajo2.jpg') }}" alt="Diseño dental 2">
     </div>
 </section>
