--- a/static/reservas.css
+++ b/static/reservas.css
@@ -141,3 +141,18 @@ input:focus {
         font-size: 1.4rem;
     }
 }
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+}
+
+.video-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
