--- a/templates/index.html
+++ b/templates/index.html
@@ -18,15 +18,13 @@
 </header>
 
 <section class="hero">
-   <div class="video-container">
-    <iframe width="560" height="315" 
-        src="https://youtu.be/F06EWU50_cM?si=4H-z6GiE16wwDmbf" 
-        title="Video dental" frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-        allowfullscreen>
-    </iframe>
-</div>
-
+    <div class="video-container">
+        <iframe src="https://www.youtube.com/embed/F06EWU50_cM"
+            title="Video dental" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+        </iframe>
+    </div>
     <div class="overlay">
         <h2>Sonrisas Perfectas, Resultados Profesionales</h2>
         <a href="/reservas" class="btn">Agendar Cita</a>
@@ -41,8 +39,9 @@
 <section class="galeria">
     <h2>Galería de Trabajos</h2>
     <div class="imagenes">
-        <img src="https://pixabay.com/photos/teeth-cleaning-tooth-repairs-1514692/" alt="Diseño dental 1">
-        <img src="https://pixabay.com/photos/all-on-4-dental-implants-belfast-8378579/" alt="Diseño dental 2">
+        <img src="https://cdn.pixabay.com/photo/2016/11/29/09/32/teeth-1867446_1280.jpg" alt="Diseño dental 1">
+        <img src="https://cdn.pixabay.com/photo/2022/01/15/15/39/dental-6943371_1280.jpg" alt="Diseño dental 2">
+        <img src="https://cdn.pixabay.com/photo/2016/03/27/22/22/teeth-1281082_1280.jpg" alt="Diseño dental 3">
     </div>
 </section>
 
@@ -50,7 +49,7 @@
     <h2>Servicios en la Nube</h2>
     <p>Accede a nuestros medios digitales desde cualquier lugar:</p>
     <div class="enlaces">
-        <a href="https://youtu.be/QcoLMwmtutY?si=bp888_7tyBasmdXt" target="_blank">YouTube</a>
+        <a href="https://www.youtube.com/channel/UCXYZ123" target="_blank">YouTube</a>
         <a href="https://www.instagram.com/lab_dental" target="_blank">Instagram</a>
     </div>
 </section>
@@ -61,3 +60,4 @@
 
 </body>
 </html>
+
